Removing unncessary css.

--- a/food-app/templates/recipe_update.html
+++ b/food-app/templates/recipe_update.html
@@ -24,7 +24,7 @@
     <input type='hidden' id='hidden_input'>
   </div>
 
-  <div id='recipe_obj'>
+  <div id='recipe_obj' class='hide'>
     <form id='recipe_form' onsubmit="return post_recipe_request()">
       <table id='recipe_table'>
       <tr>
