Item page loads at data at page launch.

--- a/food-app/templates/base.html
+++ b/food-app/templates/base.html
@@ -68,8 +68,8 @@
         
             <div id="footerblurb">
                 <div id="footerblurb-inner">
-                    <h2><span>Heading</span></h2>
-                    <p>Here is the footer text, very interesting stuff.</p>
+                    <h2><span>Munch</span></h2>
+                    <p>Improving your cooking, one meal as a time.</p>
                     <div class="clr"></div>
                 </div>
             </div>
