--- a/food-app/static/outline_styles.css
+++ b/food-app/static/outline_styles.css
@@ -11,11 +11,11 @@ h1, h2, h3, h4, h5, h6 {color:darkblue;}
 
 /* Header */
 #header { background:#eee; }
-#header-inner { margin:0 auto; padding:2px 8px; width:970px;background:#fff;}
+#header-inner { margin:0 auto; padding:2px 8px; width:1000px;background:#fff;}
 
 /* Feature */
 .feature { background:#eee;padding:0;}
-.feature-inner { margin:auto;padding:4px 8px;width:970px;background:blue; }
+.feature-inner { margin:auto;padding:4px 8px;width:1000px;background:blue; }
 .feature-inner h1 {color:#d3d3f9;font-size:22px;}
 
 /* Menu */
@@ -26,10 +26,10 @@ h1, h2, h3, h4, h5, h6 {color:darkblue;}
 #top-nav ul li.active a, #top-nav ul li a:hover { color:#d3d3f9;}
 
 /* Content */
-#content-inner { margin:0 auto; padding:0px; width:986px;height:550px;background:#fff;}
+#content-inner { margin:0 auto; padding:0px; width:1016px;height:550px;background:#fff;}
 #content #contentbar { margin:0; padding:0; float:right; width:760px;}
 #content #contentbar .article { margin:0 0 24px; padding:0 20px 0 15px; }
-#content #sidebar { padding:-8px; float:left; width:200px; margin: 0px 0px 0px 0px; height:550px; border-right: gray solid 2px;}
+#content #sidebar { padding:-8px; float:left; width:200px; margin: 0px 0px 0px 0px; height:100%; border-right: gray solid 2px;}
 #content #sidebar .widget { margin:0 0 12px; padding:10px 10px 10px 15px;line-height:1.4em;}
 #content #sidebar .widget h3 { color:blue; font-size:18px; font-weight:bold;}
 #content #sidebar .widget h3 a { text-decoration:none;}
@@ -41,12 +41,12 @@ h1, h2, h3, h4, h5, h6 {color:darkblue;}
 
 /* Footerblurb */
 #footerblurb { background:#eee;color:blue;}
-#footerblurb-inner { margin:0 auto; width:970px; padding:8px;background:#d3d3f9;border-bottom-right-radius:15px;border-bottom-left-radius:15px;}
+#footerblurb-inner { margin:0 auto; width:1000px; padding:8px;background:#d3d3f9;border-bottom-right-radius:15px;border-bottom-left-radius:15px;}
 #footerblurb .column { margin:0; text-align:justify; float:left;width:250px;padding:0 24px;}
 
 /* Footer */
 #footer { background:#eee;}
-#footer-inner { margin:auto; text-align:center; padding:12px; width:970px;}
+#footer-inner { margin:auto; text-align:center; padding:12px; width:1000px;}
 #footer a {color:blue;text-decoration:none;}
 
 /* Clear both sides to assist with div alignment  */
