Refined recipe list grouping.

--- a/food-app/templates/grocery_list.html
+++ b/food-app/templates/grocery_list.html
@@ -25,7 +25,11 @@
         <option value="Recipe Types">Recipe Types</option>
         <option value="All Recipes">All Recipes</option>
       </select>
+    </div>
+    <div class=content>
       <input id="recipelist" type="email" list="recipes" multiple>
+    </div>
+    <div class=content>
       <input id="clickMe" type="button" value="Add Recipe" class="btn" onclick="addToList('recipe_table', 'recipelist');" />
     </div>
   </div>
