Sorting recipes by type.

--- a/food-app/templates/grocery_list.html
+++ b/food-app/templates/grocery_list.html
@@ -21,7 +21,7 @@
     </div>
 
     <div class=content id="AddRecipesButton">
-      <select id="recipe_sort">
+      <select id="recipe_sort" onchange="return recipe_filters()">
         <option value="Recipe Types">Recipe Types</option>
         <option value="All Recipes">All Recipes</option>
       </select>
