--- a/food-app/templates/recipe_update.html
+++ b/food-app/templates/recipe_update.html
@@ -3,7 +3,7 @@
 <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles.css') }}" />
 <script src="static/request_helpers.js" type="text/javascript"></script>
 <script src="static/recipe_funcs.js" type="text/javascript"></script>
-<script>window.onload = make_request("/recipes", load_data);</script>
+<script>window.onload = make_request("/recipes", load_recipes);</script>
 
 <div class="content">
 
